changing script name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <!-- Style -->
   <link rel="stylesheet" href="./styles/css/reset.css">
   <link rel="stylesheet" href="./styles/css/style-aside.css">
+  <link rel="stylesheet" href="./styles/css/font-size.css">
   <link rel="stylesheet" href="./styles/css/style-index.css">
+
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
   <script src="./scripts/aside.js"></script>
 
@@ -92,7 +99,7 @@
       <div class="mentors">
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Guilherme Lima</h3>
+          <h3 class="mentors-card-name font12">Guilherme Lima</h3>
           <h4>Desenvolvedor Sênior</h4>
           <div class="mentors-card-description">
             <div class="mentors-card-description-specialty">
