--- a/index.html
+++ b/index.html
@@ -28,17 +28,12 @@
 
         <!-- ASIDE MENU -->
 
-        <aside class="menu">
+        <aside id="menu">
             
             <!-- BUTTON USED ON MOBILE -->
-        <div id="nav-btn" class="btnMenu">
-            <span class="line1"></span>
-            <span class="line2"></span>
-            <span class="line3"></span>
-            <span class="line4"></span>
-        </div>
+        <div class="navBtn"></div>
 
-        <div id="nav-menu" class="navMenu">  
+        <div class="nav-menu">  
             <!-- PROFILE USER -->
             <div class="profile">
                 <div class="profile-image">
