fixing css mobile

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -15,63 +15,7 @@
 
 <body>
 
-<!-- ASIDE MENU -->
-
-<aside class="menu">
-
-<!-- BUTTON USED ON MOBILE -->
-<div id="nav-btn">
-  <img src="./assets/icons/aside-mobile-icon.svg" alt="">
-</div>
-
-<div id="nav-menu">
-  <!-- PROFILE USER -->
-  <div class="profile">
-    <div class="profile-image">
-      <img src="./assets/img/perfil mulher.jpg" alt="">
-    </div>
-
-    <div class="profile-info">
-      <h3>Cristina Martins</h3>
-      <h2> <a href="#">Editar perfil</a></h2>
-    </div>
-  </div>
-
-  <!-- NAV -->
-  <nav class="nav">
-
-    <!-- MENU ITEMS -->
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/home-page-icon.svg" alt="">
-        <h4>Página Inicial</h4>
-      </a>
-    </div>
-
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/schedule-icon.svg" alt="">
-        <h4>Meus agendamentos</h4>
-      </a>
-    </div>
-
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/profile-icon.svg" alt="">
-        <h4>Perfil</h4>
-      </a>
-    </div>
-
-    <div class="nav-item" id="nav-item-out-line">
-      <a href="#">
-        <img src="./assets/icons/out-line-icon.svg" alt="">
-        <h4>Sair</h4>
-      </a>
-    </div>
-  </nav>
-</div>
-
-<aside class="body-main">
+<section class="body-main">
   <h2 class="mentorship-schedule-title font28">Meus agendamentos</h2>
   <div class="main-first-larger-square">
     <div class="first-square-appointment">
@@ -108,7 +52,6 @@
             <button id="cancel-button">Cancelar mentoria</button>
             <button id="send-button">Enviar mensagem</button>
           </article>
-        </article>
       </section>
     </div>
     <section class="second-square-info-calend">
@@ -121,7 +64,7 @@
       </article>
     </section>
   </div>
-</aside>
+</section>
 
 </body>
 </html>
