--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="./styles/css/style-aside.css">
   <link rel="stylesheet" href="./styles/css/style-index.css">
 
-  <script src="./scripts/aside.js"></script>
-
   <title>Página Inicia</title>
 </head>
 <body>
@@ -31,7 +29,7 @@
         <aside id="menu">
             
             <!-- BUTTON USED ON MOBILE -->
-        <div class="navBtn"></div>
+        <div class="navBtn" id="Btn"></div>
 
         <div class="nav-menu">  
             <!-- PROFILE USER -->
@@ -206,5 +204,6 @@
       </div>
     </section>
   </main>
+  <script src="./scripts/aside.js"></script>
 </body>
 </html>
