--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -8,9 +8,9 @@
   <!--Fonts-->
 
   <!--Styles-->
-  <link rel="stylesheet" href="../styles/css/mentorship-schedules.css"/>
-  <link rel="stylesheet" href="../styles/css/style-aside.css"/>
-  <link rel="stylesheet" href="../styles/css/style-index.css"/>
+  <link rel="stylesheet" type="text/css" href="../styles/css/mentorship-schedules.css"/>
+  <link rel="stylesheet" type="text/css" href="../styles/css/style-aside.css"/>
+  <link rel="stylesheet" type="text/css" href="../styles/css/style-index.css"/>
 
   <title></title>
 </head>
