--- a/index.html
+++ b/index.html
@@ -17,9 +17,39 @@
         <!-- HEADER --> 
 
         <header class="research">
-          <button>Seja um mentor</button>
+          <div class="logo"> <div class="logo-img"></div> </div>
           <div class="research-search">
-            <p>área da barra de pesquisa</p>
+            <div class="research-search-filter">
+              <input class="research-search-filter-input" type="search" placeholder="Pesquise aqui outros mentores">
+              <!-- OCCUPATION -->
+              <select name="occupation" size="1" class="search-select">  
+                <option value="cargo"> Cargo </option>  
+                <option value="diretor"> Diretor </option>  
+                <option value="dp"> Departamento Pessoal </option>  
+                <option value="desenvolvedor"> Desenvolvedor </option>  
+                <option value="ux"> UX </option>  
+                <option value="gerente"> Gerente </option>  
+              </select> 
+                      <!-- SENIORITY -->
+                      <select name="seniority" size="1" class="search-select">  
+                <option value="senioridade"> Senioridade </option>    
+                <option value="treinne"> Treinne </option>  
+                <option value="junior"> Junior </option>  
+                <option value="pleno"> Pleno </option>  
+                <option value="senior"> Senior </option>  
+              </select> 
+              <!-- HABILITY -->
+              <select name="hability" size="1" class="search-select">  
+                <option value="habilidades"> Habilidades </option>  
+                <option value="Java"> Java </option>    
+                <option value="JavaScript"> JavaScript </option>  
+                <option value="UX"> UX </option>  
+                <option value="UI"> UI </option>  
+              </select> 
+              <button>Filtrar</button>
+            </div>
+            <button>Seja um mentor</button>
+            
           </div>
         </header>
 
