--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="research-search-filter">
               <input class="research-search-filter-input" type="search" placeholder="Pesquise aqui outros mentores">
               <!-- OCCUPATION -->
-              <select name="occupation" size="1" class="search-select">  
+              <select name="occupation" size="1" class="research-search-select">  
                 <option value="cargo"> Cargo </option>  
                 <option value="diretor"> Diretor </option>  
                 <option value="dp"> Departamento Pessoal </option>  
@@ -31,7 +31,7 @@
                 <option value="gerente"> Gerente </option>  
               </select> 
                       <!-- SENIORITY -->
-                      <select name="seniority" size="1" class="search-select">  
+                      <select name="seniority" size="1" class="research-search-select">  
                 <option value="senioridade"> Senioridade </option>    
                 <option value="treinne"> Treinne </option>  
                 <option value="junior"> Junior </option>  
@@ -39,7 +39,7 @@
                 <option value="senior"> Senior </option>  
               </select> 
               <!-- HABILITY -->
-              <select name="hability" size="1" class="search-select">  
+              <select name="hability" size="1" class="research-search-select">  
                 <option value="habilidades"> Habilidades </option>  
                 <option value="Java"> Java </option>    
                 <option value="JavaScript"> JavaScript </option>  
@@ -115,9 +115,9 @@
       <div class="mentors">
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Guilherme Lima</h3>
-          <h4>Desenvolvedor Sênior</h4>
           <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Guilherme Lima</h3>
+            <h4>Desenvolvedor Sênior</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
@@ -130,9 +130,9 @@
 
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
@@ -145,9 +145,9 @@
 
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
@@ -160,9 +160,9 @@
 
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
@@ -174,38 +174,9 @@
         </div>
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
-            <div class="mentors-card-description-specialty">
-              <h4>HTML</h4>
-              <h4>Javascript</h4>
-              <h4>React</h4>
-              <h4>+2</h4>
-            </div>
-          </div>
-          <button class="mentors-card-btn">Ver Perfil</button>
-        </div>
-
-        <div class="mentors-card">
-          <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
-          <div class="mentors-card-description">
-            <div class="mentors-card-description-specialty">
-              <h4>HTML</h4>
-              <h4>Javascript</h4>
-              <h4>React</h4>
-              <h4>+2</h4>
-            </div>
-          </div>
-          <button class="mentors-card-btn">Ver Perfil</button>
-        </div>
-        <div class="mentors-card">
-          <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
-          <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
@@ -218,9 +189,38 @@
 
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
+
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <div class="mentors-card-description">
+            <h3 class="mentors-card-name">Nome do mentor</h3>
+            <h4>Cargo que ocupa</h4>
             <div class="mentors-card-description-specialty">
               <h4>HTML</h4>
               <h4>Javascript</h4>
