--- a/edit-profile.html
+++ b/edit-profile.html
@@ -21,8 +21,9 @@
 </head>
 <body>
    <header class="header">
-      <i class="">icon</i>
-      <img id="logo-mobile" src="../../assets/icons/logo-mobile.svg" alt="Logo do app Technical Share: um foguete laranja com escrita em azul escuro">
+      <img class="header-logo" id="logo-menu-mobile" src="../../assets/icons/menu-icon.svg" alt="menu para acesso de funcionalidades">
+      <img class="header-logo" id="logo-mobile" src="../../assets/icons/logo-mobile.svg" alt="Logo do app Technical Share: um foguete laranja com escrita em azul escuro">
+   </header>
    <main>
       <form class="form-profile">
 
