--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </select> 
               <button>Filtrar</button>
             </div>
-            <button>Seja um mentor</button>
+            <button id="sjmentor">Seja um mentor</button>
             
           </div>
         </header>
