created global reference for mentor and selected date, created form to schedule mentoring and function that send info to backend

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -81,7 +81,6 @@
             </ul> -->
           </div>
         </article>
-
         <article class="schedule">
           <span class="schedule-title+icon">
             <h2 class="schedule-title font18">Dia/Hora</h2>
@@ -141,8 +140,11 @@
               </div>
             </table>
           </div>
+          <div id="dates">
+            <form id="schedule-form"></form>
+          </div>
 
-          <button type="submit" class="schedule-button font20">
+          <button id="btn" class="schedule-button font20">
             Agendar mentoria
           </button>
           <div class="schedule-button-sucess font14">
