adding add-icons

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -104,8 +104,8 @@
          </ul>
       </div>
       
-      <div id="button-plus">
-         <i class="">i</i>
+      <div class="button-plus">
+         <img class="add-icon" src="../../assets/icons/add-icon.svg" alt="">
          <h4>Clique para adicionar mais interesses</h4>
       </div>
 
@@ -123,8 +123,8 @@
                <li class="opened-topic hability">Product Discovery</li>
                <li class="opened-topic hability">Product Discovery</li>
          </ul>
-         <div id="button-plus">
-            <i class="">i</i>
+         <div class="button-plus">
+            <img class="add-icon" src="../../assets/icons/add-icon.svg" alt="">
             <h4>Clique para adicionar mais habilidades</h4>
          </div>
 
