finish home page style

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <header class="research">
           <div class="logo"> <div class="logo-img"></div> </div>
-          <div class="research-search">
+          <!-- <div class="research-search">
             <div class="research-search-filter">
               <input class="research-search-filter-input" type="search" placeholder="Pesquise aqui outros mentores">
-              <!-- OCCUPATION -->
+              OCCUPATION 
               <select name="occupation" size="1" class="research-search-select">  
                 <option value="cargo"> Cargo </option>  
                 <option value="diretor"> Diretor </option>  
@@ -30,7 +30,7 @@
                 <option value="ux"> UX </option>  
                 <option value="gerente"> Gerente </option>  
               </select> 
-                      <!-- SENIORITY -->
+                       SENIORITY 
                       <select name="seniority" size="1" class="research-search-select">  
                 <option value="senioridade"> Senioridade </option>    
                 <option value="treinne"> Treinne </option>  
@@ -38,7 +38,7 @@
                 <option value="pleno"> Pleno </option>  
                 <option value="senior"> Senior </option>  
               </select> 
-              <!-- HABILITY -->
+               HABILITY 
               <select name="hability" size="1" class="research-search-select">  
                 <option value="habilidades"> Habilidades </option>  
                 <option value="Java"> Java </option>    
@@ -48,7 +48,7 @@
               </select> 
               <button>Filtrar</button>
             </div>
-            <button id="sjmentor">Seja um mentor</button>
+            <button id="sjmentor">Seja um mentor</button> -->
             
           </div>
         </header>
@@ -91,7 +91,7 @@
                 </a>
             </div>
 
-            <div class="nav-item">            
+            <div class="nav-item" id="nav-item-profile">            
                 <a href="#">
                   <img src="./assets/icons/profile-icon.svg" alt="">
                     <h4>Perfil</h4> 
