added scripts calendar

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -100,7 +100,7 @@
               <figure class="circle"></figure>
               <figcaption>Mentorado</figcaption>
             </div>
-            
+
           </div>
         </section>
 
@@ -140,9 +140,15 @@
   </main>
 </section>
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../scripts/get-user-info.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/js/evo-calendar.min.js"></script>
+
 <script src="../scripts/calendar/evo-calendar.min.js"></script>
 <script src="../scripts/calendar/initialized-calendar.js"></script>
 <script src="../scripts/calendar/calendar-event.js"></script>
+
 </body>
 </html>
