Created script to get user info and show mentorings on perfil

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -105,17 +105,17 @@
         </section>
 
         <section class="appointment-content-list">
-            <article class="appointment-list-mentor-photo">
+            <article id="user-info" class="appointment-list-mentor-photo">
               <img class="mentor-photo" src="../assets/img/perfil mulher.jpg"></img>
-              <div>
+<!--               <div>
                 <h2>Guilherme Lima</h2>
                 <h4>Desenvolvedor Sênior</h4>
-              </div>
+              </div> -->
             </article>
           
-            <article class="date-hour">
-              <div id="date">Data: 20/04/2022</div>
-              <div id="hour">Hora: 09h às 10h</div>
+            <article id="mentorings" class="date-hour">
+              <!-- <div id="date">Data: 20/04/2022</div> -->
+              <!-- <div id="hour">Hora: 09h às 10h</div> -->
             </article>
           
             <article class="cancel-send-buttons">
