Finished script with function to cancel a mentoring

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -116,12 +116,13 @@
             <article id="mentorings" class="date-hour">
               <!-- <div id="date">Data: 20/04/2022</div> -->
               <!-- <div id="hour">Hora: 09h às 10h</div> -->
+<!--               <div class="cancel-send-buttons">
+                <button id="cancel-button">Cancelar mentoria</button>
+                <button id="send-button">Enviar mensagem</button>
+              </div> -->
             </article>
           
-            <article class="cancel-send-buttons">
-              <button id="cancel-button">Cancelar mentoria</button>
-              <button id="send-button">Enviar mensagem</button>
-            </article>
+
         </section>
       </div>
 
