link of the pages

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -52,28 +52,28 @@
 
                   <!-- MENU ITEMS -->
                   <div class="nav-item">
-                     <a href="#">
+                     <a href="http://127.0.0.1:5500/index.html">
                         <img src="./assets/icons/home-page-icon.svg" alt="">
                         <h4>Página Inicial</h4>
                      </a>
                   </div>
 
                   <div class="nav-item">
-                     <a href="#">
+                     <a href="http://127.0.0.1:5500/mentorship-schedules.html">
                         <img src="./assets/icons/schedule-icon.svg" alt="">
                         <h4>Meus agendamentos</h4>
                      </a>
                   </div>
 
                   <div class="nav-item" id="nav-item-profile">
-                     <a href="#">
+                     <a href="http://127.0.0.1:5500/edit-profile.html">
                         <img src="./assets/icons/profile-icon.svg" alt="">
                         <h4>Perfil</h4>
                      </a>
                   </div>
 
                   <div class="nav-item" id="nav-item-out-line">
-                     <a href="#">
+                     <a href="http://127.0.0.1:5500/edit-profile.html">
                         <img src="./assets/icons/out-line-icon.svg" alt="">
                      </a>
                   </div>
