--- a/mentorship-schedules.html
+++ b/mentorship-schedules.html
@@ -48,7 +48,7 @@
 
           <!-- MENU ITEMS -->
       <div class="nav-item">
-          <a href="#">
+          <a href="http://127.0.0.1:5500/index.html">
             <img src="./assets/icons/home-page-icon.svg" alt="">
               <h4>Página Inicial</h4> 
           </a>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="nav-item">            
-          <a href="#">
+          <a href="http://127.0.0.1:5500/edit-profile.html">
             <img src="./assets/icons/profile-icon.svg" alt="">
               <h4>Perfil</h4> 
           </a>
