--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -54,21 +54,21 @@
 
             <!-- MENU ITEMS -->
         <div class="nav-item">
-            <a href="#">
+            <a href="./index.html">
               <img src="./assets/icons/home-page-icon.svg" alt="">
                 <h4>Página Inicial</h4> 
             </a>
         </div> 
 
         <div class="nav-item">            
-            <a href="#">
+            <a href="./mentorship-schedules.html">
               <img src="./assets/icons/schedule-icon.svg" alt="">  
                 <h4>Meus agendamentos</h4> 
             </a>
         </div>
 
         <div class="nav-item" id="nav-item-profile">            
-            <a href="#">
+            <a href="./edit-profile.html">
               <img src="./assets/icons/profile-icon.svg" alt="">
                 <h4>Perfil</h4> 
             </a>
